--- a/opdracht1/index.html
+++ b/opdracht1/index.html
@@ -20,8 +20,7 @@
         <span>a</span>
         <span>k</span>
     </h1>
-
-
+    <div></div>
     <script src="scripts/script.js"></script>
 </body>
 
