opdracht 2 first draft, en readme update

--- a/opdracht2/index.html
+++ b/opdracht2/index.html
@@ -2,20 +2,42 @@
 <html lang="nl">
 	
 <head>
-	<meta charset="UTF-8">
-	<meta name="author" content="jouw naam">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	
-	<title>Opdracht 2: Interactie galore - Frontend voor Designers</title>
-	
-	<link href="styles/style.css" rel="stylesheet">
-  <link rel="icon" type="image/svg+xml" href="images/favicon.svg">
+    <meta charset="UTF-8">
+    <meta name="author" content="jouw naam">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Opdracht 2: Interactie galore - Frontend voor Designers</title>
+    <link href="styles/style.css" rel="stylesheet">
+    <link rel="icon" type="image/svg+xml" href="images/favicon.svg">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
-	<h1>Opdracht 2</h1>
+    <h1>Tier maker</h1>
+    
+   <header></header>
 
-	<script src="scripts/script.js"></script>
-</body>
-	
-</html>
+    <section>
+        <h2>A</h2>
+    </section>
+    <section>
+        <h2>B</h2>
+    </section>
+    <section>
+        <h2>C</h2>
+    </section>
+    <section>
+        <h2>D</h2>
+    </section>
+    <section>
+        <h2>E</h2>
+    </section>
+    <section>
+        <h2>F</h2>
+    </section>
+
+
+    <script src="scripts/script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sortablejs@latest/Sortable.min.js"></script>
+</body></html>
