Move items and keep focus update

--- a/opdracht2/index.html
+++ b/opdracht2/index.html
@@ -39,7 +39,8 @@
         </ul>
     </header>
 
-    <section>
+    <div>
+    <section  id="sectionlists">
         <h2>A</h2>
         <ul></ul>
     </section>
@@ -63,6 +64,7 @@
         <h2>F</h2>
         <ul></ul>
     </section>
+    </div>
 
     <p>Welcome to the Starter Pokemon Tier List maker, create your own tier list by dragging and dropping items in the tiers. By clicking on the "Random Pokemons" button you will get a selection of random pokemons from the first two generations. </p>
 
