read-me update en js opgeschoont

--- a/opdracht2/index.html
+++ b/opdracht2/index.html
@@ -17,8 +17,8 @@
 <body>
     <h1>Starter Pokemon Tier List</h1>
     <header>
-        <ul id="list">
-            <li><button><img id="pokemon" class="pokemon-images" src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/1.png" /></button></li>
+        <ul>
+            <li><button><img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/1.png" /></button></li>
             <li><button><img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/2.png" /></button></li>
             <li><button><img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/3.png" /></button></li>
             <li><button><img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/4.png" /></button></li>
@@ -40,7 +40,7 @@
     </header>
 
     <div>
-    <section  id="sectionlists">
+    <section>
         <h2>A</h2>
         <ul></ul>
     </section>
